fix pipe handle leak in qlocalsocket_win.cpp

Destroying a QLocalSocket with unwritten data left unclosed handles
behind. The connection wasn't closed properly, such that the other
end didn't get notified about the connection loss.

Task-number: QTBUG-7815
Reviewed-by: ossi